examples/test/testpolicy14227.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14227
  namespace: namespace415
spec:
  podSelector:
    matchLabels:
      key2: value49
      key4: value39
      key14: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value12
      podSelector:
        matchLabels:
          key27: value31
          key10: value20
          key43: value20
